<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/bg_white_bottom"
    android:orientation="vertical"
    tools:layout_gravity="bottom">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="21dp"
        android:paddingVertical="17dp"
        android:text="@string/choose_share_way"
        android:textColor="@color/box_33"
        android:textSize="19sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="21dp"
        android:background="@color/box_05_000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp">

        <LinearLayout
            android:id="@+id/ll_share_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_corner_efeefc_17"
                android:padding="21dp"
                android:src="@mipmap/ic_share_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/share_facebook"
                android:textColor="@color/box_33"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_whats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_corner_efeefc_17"
                android:padding="21dp"
                android:src="@mipmap/ic_share_whats" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/share_whats"
                android:textColor="@color/box_33"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_corner_efeefc_17"
                android:padding="21dp"
                android:src="@mipmap/ic_share_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/share_line"
                android:textColor="@color/box_33"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_copy_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_corner_efeefc_17"
                android:padding="21dp"
                android:src="@mipmap/ic_copy_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/copy_link"
                android:textColor="@color/box_33"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>